--- a/public/css/all.css
+++ b/public/css/all.css
@@ -134,6 +134,72 @@ ul.action_admin_with_user,
     max-width: 100px;
 }
 
+.wrapper-manger-words {
+    background-color: #fff;
+    padding-bottom: 100px;
+}
+
+.header-tablde {
+    overflow: auto;
+    margin-bottom: 30px;
+}
+
+.wrapper-manger-words .header-tablde .page-header {
+    float: left;
+    margin: 0 0 15px 0;
+    padding-top: 10px;
+    padding-bottom: 0;
+}
+
+.wrapper-manger-words .header-tablde .page-header h1 {
+    margin-top: 0;
+}
+
+.wrapper-manger-words .header-tablde .action-word {
+    float: right;
+    padding-top: 15px;
+}
+
+#form-create-words .form-group {
+    position: relative;
+}
+
+#form-create-words input[type=checkbox] {
+    position: absolute;
+    right: -6px;
+    top: 10px;
+}
+
+#form-create-words select {
+    width: auto;
+    margin-left: 15px;
+    display: initial;
+}
+
+.delete-answer {
+    margin-right: 16px;
+    background-color: #C83A36;
+    color: #fff;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+.delete-answer:hover {
+    background-color: red;
+}
+
+.ctz-body {
+    padding: 40px;
+}
+
+.container {
+    background: #fff;
+}
+
+.form-delete-words {
+    display: inline-block;
+}
+
 @media only screen and (max-width: 992px) {
     .secction-category .col-md-2 > a {
         margin: 0;
